Date widget issue fixed. Year is now visible

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -1884,3 +1884,8 @@ table.weeksheet th{
     padding-right: 2px;
     color:gray;
 }
+
+.field{
+    width:auto;
+    height:25px;
+}
